src/objects/BillNPay__T2P_Merchant__c.object
<CustomObject>
    <description>The Merchant record connects Authvia to its cloud based server.  It is the top level of metadata used in Authvia and must be setup before any other objects</description>
    <fields>
        <fullName>BillNPay__API_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Select the API user.   See Admin Guide</inlineHelpText>
        <label>API User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Merchant</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BillNPay__Active_ACH_Gateways__c</fullName>
        <inlineHelpText>Counts Active ACH Gateways to ensure only 1 is active</inlineHelpText>
        <label>Active ACH Gateways</label>
        <summaryFilterItems>
            <field>BillNPay__T2P_Configuration__c.BillNPay__Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>BillNPay__T2P_Configuration__c.BillNPay__Payment_Method_Configuration__c</field>
            <operation>equals</operation>
            <value>ach, both</value>
        </summaryFilterItems>
        <summaryForeignKey>BillNPay__T2P_Configuration__c.BillNPay__Merchant__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>BillNPay__Active_Card_Gateways__c</fullName>
        <inlineHelpText>Counts Active Card Gateways to ensure only 1 is active</inlineHelpText>
        <label>Active Card Gateways</label>
        <summaryFilterItems>
            <field>BillNPay__T2P_Configuration__c.BillNPay__Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>BillNPay__T2P_Configuration__c.BillNPay__Payment_Method_Configuration__c</field>
            <operation>equals</operation>
            <value>credit-card, both</value>
        </summaryFilterItems>
        <summaryForeignKey>BillNPay__T2P_Configuration__c.BillNPay__Merchant__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>BillNPay__Active__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Active Merchant Record</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BillNPay__Bank_Account_Number__c</fullName>
        <inlineHelpText>Bank account for paying monthly Bill &amp; Pay bills</inlineHelpText>
        <label>Bank Account Number</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BillNPay__Bank_Account_Type__c</fullName>
        <label>Bank Account Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Checking</fullName>
                    <default>true</default>
                    <label>Checking</label>
                </value>
                <value>
                    <fullName>Savings</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BillNPay__Bank_Routing_Number__c</fullName>
        <inlineHelpText>Bank account for paying monthly Bill &amp; Pay bills</inlineHelpText>
        <label>Bank Routing Number</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BillNPay__Enable_Guest_Pay__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>This field is primarily used with the Embedded Payment Widget.  See Admin Guide for additional info
Recommend: Unchecked</inlineHelpText>
        <label>Enable Guest Pay</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BillNPay__Enable_Over_Payments__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>In HPP, can customers make payments above the due amount.  Example, can use pay loan down faster</inlineHelpText>
        <label>Enable Over Payments</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BillNPay__Enable_Partial_Payments__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>In HPP, can customers make partial payments, or must they pay in full</inlineHelpText>
        <label>Enable Partial Payments</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BillNPay__Friday_End__c</fullName>
        <defaultValue>&apos;21:00&apos;</defaultValue>
        <label>Friday End</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>BillNPay__Time</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>BillNPay__Friday_Start__c</fullName>
        <defaultValue>&apos;9:00&apos;</defaultValue>
        <label>Friday Start</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>BillNPay__Time</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>BillNPay__From_Email__c</fullName>
        <inlineHelpText>Email address to display as sender for Email2Pay. Example &quot;no-reply@cetmobile.com&quot;</inlineHelpText>
        <label>From Email (Deprecate)</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>BillNPay__HPP_Save_Payment_Method__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>If Checked, user has option to opt out of saving Payment Method on HPP.  If user opts out, user must re-enter payment method every time.  
If Unchecked, user cannot opt out of saving Payment Method.
Recommend: Unchecked</inlineHelpText>
        <label>HPP-Show &quot;Save my Payment Method&quot;</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BillNPay__HPP_Show_Payment_Method__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>If Checked, user will see existing payment methods to select from on HPP.  
If Unchecked user must re-enter new method every time.  
Recommend: Checked</inlineHelpText>
        <label>HPP-Show Existing Payment Method</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BillNPay__IsRunningOAuth__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Running oAuth</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BillNPay__Key__c</fullName>
        <label>Key DEPRECATED</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>BillNPay__Maximum_Amount_ACH__c</fullName>
        <defaultValue>10000.00</defaultValue>
        <label>Maximum Amount - ACH</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BillNPay__Maximum_Amount_Card__c</fullName>
        <defaultValue>10000.00</defaultValue>
        <label>Maximum Amount - Card</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BillNPay__Merchant_Logo_URL__c</fullName>
        <inlineHelpText>Used for invoices &amp; hosted payment page

PNG or JPG
Full color
200 x 120 pxl max
Images used in email will be resized to fit
Transparent or white background
Hosted by the merchant with a fully qualified URL
Manage HTTP/HTTPS to avoid pos</inlineHelpText>
        <label>Merchant Logo URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>BillNPay__Merchant_Reply_To_Email__c</fullName>
        <label>Merchant Reply-To Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>BillNPay__Merchant_id__c</fullName>
        <inlineHelpText>Assigned during registration</inlineHelpText>
        <label>Merchant ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BillNPay__Minimum_Amount_ACH__c</fullName>
        <defaultValue>1</defaultValue>
        <label>Minimum Amount - ACH</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BillNPay__Minimum_Amount_Card__c</fullName>
        <defaultValue>1</defaultValue>
        <label>Minimum Amount - Card</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BillNPay__Monday_End__c</fullName>
        <defaultValue>&apos;21:00&apos;</defaultValue>
        <label>Monday End</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>BillNPay__Time</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>BillNPay__Monday_Start__c</fullName>
        <defaultValue>&apos;9:00&apos;</defaultValue>
        <label>Monday Start</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>BillNPay__Time</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>BillNPay__Non_Profit__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check if deployed into org with Non-Profit Success Pack (NPSP)</inlineHelpText>
        <label>Non-Profit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BillNPay__OAuth__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Must be always checked to ensure the integration between Authvia to SF</inlineHelpText>
        <label>OAuth</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BillNPay__Org_Token__c</fullName>
        <label>Org Token</label>
        <length>175</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>BillNPay__Payment_Plan__c</fullName>
        <label>Payment Plan</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Starter</fullName>
                </value>
                <value>
                    <fullName>Lite</fullName>
                </value>
                <value>
                    <fullName>Business - Small</fullName>
                </value>
                <value>
                    <fullName>Business - Medium</fullName>
                </value>
                <value>
                    <fullName>Business - Large</fullName>
                </value>
                <value>
                    <fullName>Enterprise</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BillNPay__Payment_Type__c</fullName>
        <inlineHelpText>Switch between Authvia production and sandbox environments.  Normally this will align Sandbox for Salesforce Sandboxes and Production for Salesforce Production.  However, for debugging or testing you may modify.</inlineHelpText>
        <label>Payment Environment</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Production Payments</fullName>
                </value>
                <value>
                    <fullName>Sandbox Payments</fullName>
                    <default>true</default>
                    <label>Sandbox Payments</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BillNPay__Private_Key__c</fullName>
        <label>Private Key DEPRECATED</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BillNPay__Saturday_End__c</fullName>
        <defaultValue>&apos;21:00&apos;</defaultValue>
        <label>Saturday End</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>BillNPay__Time</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>BillNPay__Saturday_Start__c</fullName>
        <defaultValue>&apos;9:00&apos;</defaultValue>
        <label>Saturday Start</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>BillNPay__Time</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>BillNPay__Send_Payment_Receipt_Via__c</fullName>
        <inlineHelpText>Select whether you want email payment receipts to be sent using Authvia or Salesforce Email Template(s) sent using Process Builder.</inlineHelpText>
        <label>Send Payment Receipt Via</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Authvia</fullName>
                    <default>true</default>
                    <label>Authvia</label>
                </value>
                <value>
                    <fullName>Salesforce</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BillNPay__Show_Request_Receipt__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>When checked, the HPP payment confirmation page will have a &quot;Request Receipt&quot; button.  If clicked by customer, this button sends a payment confirmation email from AuthVia (not Salesforce).   Recommend: Unchecked</inlineHelpText>
        <label>HPP-Show Request Receipt Button</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BillNPay__State__c</fullName>
        <description>Picklist values must match AuthVia API</description>
        <label>State</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>AL</fullName>
                </value>
                <value>
                    <fullName>AK</fullName>
                </value>
                <value>
                    <fullName>AZ</fullName>
                </value>
                <value>
                    <fullName>AR</fullName>
                </value>
                <value>
                    <fullName>CA</fullName>
                </value>
                <value>
                    <fullName>CO</fullName>
                </value>
                <value>
                    <fullName>CT</fullName>
                </value>
                <value>
                    <fullName>DE</fullName>
                </value>
                <value>
                    <fullName>FL</fullName>
                </value>
                <value>
                    <fullName>GA</fullName>
                </value>
                <value>
                    <fullName>HI</fullName>
                </value>
                <value>
                    <fullName>ID</fullName>
                </value>
                <value>
                    <fullName>IL</fullName>
                </value>
                <value>
                    <fullName>IN</fullName>
                </value>
                <value>
                    <fullName>IA</fullName>
                </value>
                <value>
                    <fullName>KS</fullName>
                </value>
                <value>
                    <fullName>KY</fullName>
                </value>
                <value>
                    <fullName>LA</fullName>
                </value>
                <value>
                    <fullName>ME</fullName>
                </value>
                <value>
                    <fullName>MD</fullName>
                </value>
                <value>
                    <fullName>MA</fullName>
                </value>
                <value>
                    <fullName>MI</fullName>
                </value>
                <value>
                    <fullName>MN</fullName>
                </value>
                <value>
                    <fullName>MS</fullName>
                </value>
                <value>
                    <fullName>MO</fullName>
                </value>
                <value>
                    <fullName>MT</fullName>
                </value>
                <value>
                    <fullName>NE</fullName>
                </value>
                <value>
                    <fullName>NV</fullName>
                </value>
                <value>
                    <fullName>NH</fullName>
                </value>
                <value>
                    <fullName>NJ</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BillNPay__Sunday_End__c</fullName>
        <defaultValue>&apos;21:00&apos;</defaultValue>
        <label>Sunday End</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>BillNPay__Time</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>BillNPay__Sunday_Start__c</fullName>
        <defaultValue>&apos;9:00&apos;</defaultValue>
        <inlineHelpText>Set the Start time when messaging to consumers is allowed</inlineHelpText>
        <label>Sunday Start</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>BillNPay__Time</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>BillNPay__Terms_Conditions__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Use Create Merchant Wizard to set</inlineHelpText>
        <label>Terms &amp; Conditions</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BillNPay__Text2Pay_Password__c</fullName>
        <inlineHelpText>Password is used to connect to the AuthVia server.  You will probably not need to login to the AuthVia portal except for troubleshooting.  Make a note of this password just in case.</inlineHelpText>
        <label>Merchant Password</label>
        <length>100</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>BillNPay__Text2Pay_Username__c</fullName>
        <inlineHelpText>Merchant portal master user name</inlineHelpText>
        <label>Merchant Username</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BillNPay__Thursday_End__c</fullName>
        <defaultValue>&apos;21:00&apos;</defaultValue>
        <label>Thursday End</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>BillNPay__Time</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>BillNPay__Thursday_Start__c</fullName>
        <defaultValue>&apos;9:00&apos;</defaultValue>
        <label>Thursday Start</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>BillNPay__Time</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>BillNPay__Timezone__c</fullName>
        <label>Timezone</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>BillNPay__Timezone</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>BillNPay__Tuesday_End__c</fullName>
        <defaultValue>&apos;21:00&apos;</defaultValue>
        <label>Tuesday End</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>BillNPay__Time</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>BillNPay__Tuesday_Start__c</fullName>
        <defaultValue>&apos;9:00&apos;</defaultValue>
        <label>Tuesday Start</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>BillNPay__Time</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>BillNPay__User_Object__c</fullName>
        <description>This field is used when payments are initiated outside SF such as from the embedded payment widget or volunteer send payment request features.  If you are initiated payments from an Account or Contact, it has no effect.</description>
        <inlineHelpText>When a pmt record is created without Account/Contact, Authvia assigns one using mobile #/email or creates new Account/Contact. This field tells Bill&amp;Pay to search Account or Contact.  Select Non-Profit for NPSP.</inlineHelpText>
        <label>Headless Payment User Object</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Account</fullName>
                </value>
                <value>
                    <fullName>Contact</fullName>
                    <default>true</default>
                    <label>Contact</label>
                </value>
                <value>
                    <fullName>Both Account &amp; Contact</fullName>
                    <label>Non-Profit</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BillNPay__Webhook__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Set by system</inlineHelpText>
        <label>Webhook</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BillNPay__Wednesday_End__c</fullName>
        <defaultValue>&apos;21:00&apos;</defaultValue>
        <label>Wednesday End</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>BillNPay__Time</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>BillNPay__Wednesday_Start__c</fullName>
        <defaultValue>&apos;9:00&apos;</defaultValue>
        <label>Wednesday Start</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>BillNPay__Time</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>BillNPay__Zip__c</fullName>
        <label>Zip Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BillNPay__city__c</fullName>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BillNPay__help_email__c</fullName>
        <inlineHelpText>The merchant&apos;s support email address</inlineHelpText>
        <label>Merchant Support Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>BillNPay__phone__c</fullName>
        <inlineHelpText>Merchant&apos;s corporate phone number</inlineHelpText>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>BillNPay__street_address__c</fullName>
        <label>Street Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BillNPay__website__c</fullName>
        <inlineHelpText>Merchant&apos;s Website landing page.  Appears in invoice templates and hosted payment page</inlineHelpText>
        <label>Website</label>
        <type>Url</type>
    </fields>
    <label>Merchant</label>
    <listViews>
        <fullName>BillNPay__Active</fullName>
        <columns>NAME</columns>
        <columns>BillNPay__Active__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>BillNPay__Active__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Active</label>
    </listViews>
    <listViews>
        <fullName>BillNPay__All</fullName>
        <columns>NAME</columns>
        <columns>BillNPay__Active__c</columns>
        <columns>BillNPay__Payment_Type__c</columns>
        <columns>BillNPay__Text2Pay_Username__c</columns>
        <columns>BillNPay__Merchant_id__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Merchant Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Merchant</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>BillNPay__One_Active_ACH_Gateway</fullName>
        <active>true</active>
        <errorConditionFormula>BillNPay__Active_ACH_Gateways__c &gt;1</errorConditionFormula>
        <errorMessage>Only 1 Gateway can be active for ACH.  To make your Gateway Active, uncheck the Active box on the existing Gateway for Payment Method = ACH or Both.  Note: the old Gateway will still be in use until you make this one Active</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>BillNPay__One_Active_Card_Gateway</fullName>
        <active>true</active>
        <errorConditionFormula>BillNPay__Active_Card_Gateways__c &gt;1</errorConditionFormula>
        <errorMessage>Only 1 Gateway can be active for Card Payments.  To make your Gateway Active, uncheck the Active box on the existing Gateway for Payment Method = Card or Both.  Note: the old Gateway will still be in use until you make this one Active</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>BillNPay__Payment_Environment_Change</fullName>
        <active>true</active>
        <description>Once set, it is not possible to switch a Merchant to/from Production to/from Sandbox</description>
        <errorConditionFormula>NOT(ISNEW())&amp;&amp;
 ISCHANGED( BillNPay__Payment_Type__c )</errorConditionFormula>
        <errorMessage>It is not possible to switch an existing Merchant between Production and Sandbox.   Instead, create separate Merchants for each Type with only one set to active at a time</errorMessage>
    </validationRules>
</CustomObject>